# flowcell_parser

./: README.md  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
flowcell_parser/: __init__.py  classes.py
